fixed some mapping problems

--- a/Help.html
+++ b/Help.html
@@ -28,7 +28,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 </head>
 <body>
 <div class="w3-content w3-padding-large w3-margin-top" id="portfolio">
-    <h1 style="font-size:60px;" ><a href="resume.html" class="txtlink">Maxwell Jones</a></h1><br>
+    <h1 style="font-size:60px;" ><a href="index.html" class="txtlink">Maxwell Jones</a></h1><br>
     <h2 style="font-size:40px;" >Education</h2>
         <h3 style="font-size:30px;"><a target="_blank" href="https://tjhsst.fcps.edu/" class="txtlink" id = "TJ">Thomas Jefferson High School</a> </h3>
     <h3>2016 - 2019, 4.1 weighted GPA</h3>
@@ -151,7 +151,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p style="font-size:20px;" class="tab" >I've been playing basketball since I was very young. In high school, I played on the varsity team for three years and was
     captain my Senior year. My freshman year of CMU, I played on the club basketball team as a shooting guard averaging over 15 points a game and played on the SPIRIT IM team as well.</p>
 <img src="images/Basketball.jpg" width="300" height="300" align="center"><br>
-    <h1 style="font-size:45px;" ><a href="resume.html" class="txtlink">Back to Main Page</a></h1><br>
+    <h1 style="font-size:45px;" ><a href="index.html" class="txtlink">Back to Main Page</a></h1><br>
     <div id="line1">Ways to contact me</div>
       <div id="line2" ><i style="font-size:12">maxwelljonesnova@gmail.com</i></div>
           <div id="line3" >
