upper to lower case path

--- a/Help.html
+++ b/Help.html
@@ -83,7 +83,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-half w3-section"><img src="images/Nodes.png" width="300" height="300"><br><p>All Nodes used for our A* Search</p>
 </div>
     <div class="w3-half w3-section"><img src="images/Manhatten.jpg" align="center" width="300" height="300"><br><p>Heatmap of Manhatten, with red/brighter areas representing more crime</p></div>
-       <div class="w3-section" ><img src="images/Path.jpg"><br><p>Optimal Path in green overlayed by heat map of crime</p></div>
+       <div class="w3-section" ><img src="images/path.jpg"><br><p>Optimal Path in green overlayed by heat map of crime</p></div>
 
         <h3 id = "linear" style="font-size:30px;">Predicting Football with Linear Algebra<a target="_blank" href="Linear.pdf" class="txtlink" >(Full Paper)</a></h3>
     <h3 style="font-size:20px;"><b>Partner</b>: <a target="_blank" href="https://www.linkedin.com/in/eric-gan-cmu/">Eric Gan</a></h3>
