--- a/Help.html
+++ b/Help.html
@@ -3,6 +3,7 @@
 <title>Maxwell Jones | CMU '23</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="images/integral.jpg" type="image/jpg">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,9 +35,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3>2016 - 2019, 4.1 weighted GPA</h3>
     <h3>Relevant Courses:</h3>
     <p style="font-size:20px;">AP Calculus BC, Multivariabe Calculus, Differential Equations, Complex Analysis, <br>AP Physics C Mechanics, AP Physics C Electricity and Magnetism,
-        Artificial Intelligence, <br> Web app Design, Mobile App design, AP Economics </p>
+        Artificial Intelligence, <br> Web App Design, Mobile App Design, AP Economics </p>
         <h3>Other Info:</h3>
-    <ul style="font-size:20px;"><li>3 year Varsity Basketball Player, caption Senior year</li><li>Created a program that allowed for advanced statistics on basketball games to be kept, like best lineups in temrs of plus minus</li>Vice President of Future Business Leaders of America<li>Helped create a Science program where students from a local middle school would participate in fun Stem projecst every other weekend</li> </ul>
+    <ul style="font-size:20px;"><li>3 year Varsity Basketball Player, captian Senior year</li><li>Created a program that allowed for advanced statistics on basketball games to be kept, like best lineups in terms of plus minus</li>Vice President of Future Business Leaders of America<li>Helped create a Science program where students from a local middle school would participate in fun Stem projects every other weekend</li> </ul>
     <br>
     <h3 style="font-size:30px;"><a target="_blank" href="https://www.cmu.edu/" class="txtlink" id = "CMU">Carnegie Mellon University</a></h3>
     <h3 style="font-size:20px;">Ai and Math major</h3>
@@ -60,7 +61,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <br>
         <h3 style="font-size:30px;"><a target="_blank" href="https://www.fcagroup.com/en-US/Pages/home.aspx" class="txtlink" id = "FCA">Fiat Chrysler Automobiles Internship</a></h3>
  <h3 style="font-size:15px;">Summer 2020</h3>
-     <h3 style="font-size:20px;">Worked on a team that used tensorflow to make a model that could predict the average number of workers that would come to a plant on any given day,</h3>
+     <h3 style="font-size:20px;">Worked on a team that used tensorflow to make a model that could predict the average number of workers that would come to a plant on any given day.</h3>
 
     <h3 style="font-size:30px;">Origami Social Networking<a target="_blank" href="https://user.tjhsst.edu/2019mjones/csslogin.html" class="txtlink" id = "Origami">(Link to Website) </a></h3>
         <h3 style="font-size:20px;"><b>Problem</b>: There is no platform for small origamists to meet and share origami models</h3>
@@ -68,7 +69,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3>Features:</h3>
     <ul style="font-size:20px;"><li>Username and Password, encrypted with a hashing function</li>
         <li>Cookies to store password for easy login</li>
-        <li>Users able to upload and delete new photos of origami, and puruse other user's photos</li>
+        <li>Users able to upload and delete new photos of origami, and pursue other user's photos</li>
         <li>Created a python script along with website allowing for users to create Origami crease patterns and download them from a python script</li>
     </ul>
 
