--- a/Help.html
+++ b/Help.html
@@ -77,9 +77,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <h3 style="font-size:20px;"><b>Partners</b>: <a target="_blank" href="https://www.linkedin.com/in/tanvi-bhargava-2b23060/">Tanvi  Bhargava</a>, <a target="_blank" href="https://www.linkedin.com/in/jasonchadwick/">Jason Chadwick</a>, <a target="_blank" href="https://www.facebook.com/adrian.maurice.12">Adrian Maurice</a></h3>
     <h3 style="font-size:20px;"><b>Problem</b>: Walking alone in big cities can be risky in areas where crime is prevelent</h3>
     <h3 style="font-size:20px;"><b>Goal</b>: Create a program that, given a start and end location, gives a user the safest timely walking path to their destination. We used Manhatten
-    as a test area since they had a lot of crime data for us to use</h3>
+    as a test area since they had a lot of crime data for us to use.</h3>
     <h3>Solution:</h3>
-    <p class="tab" style="font-size:20px;">First, we downloaded all street nodes from OSM, a mapping API. next, we assigned each node a value based on the amount of crime in the area.
+    <p class="tab" style="font-size:20px;">First, we downloaded all street nodes from OSM, a mapping API. Next, we assigned each node a value based on the amount of crime in the area.
         Given a path, would then run an A* search on the start and ending nodes, with the weight of each node being the crime rating we had assigned.</p>
     <div class="w3-half w3-section"><img src="images/Nodes.png" width="300" height="300"><br><p>All Nodes used for our A* Search</p>
 </div>
