--- a/Help.html
+++ b/Help.html
@@ -110,7 +110,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <p style="font-size:20px;" class="tab" id="Tpart1">My first experience with teaching came when I was in eighth grade, and I taught a week long camp on origami to some middle schoolers.
             We learned how to fold a simple five-fold cup, then went on the more advanced models like a heart and a crane. It was a great experience and
         piqued my interest with teaching as a whole</p>
-            <p style="font-size:20px;" class="tab">Over the next several years, I was able to teach origami across three Continents. As of now, I still teach some models at CMU's origami club</p>
+            <p style="font-size:20px;" class="tab">Over the next several years, I was able to teach origami across three continents. As of now, I still teach some models at CMU's origami club</p>
 
                                                            <div class="w3-third w3-section">
                                                                <img src="images/Origami3.jpg" width="300" height="300"><br><p >Me in 8th grade teaching origami to kids in South Carolina</p></div>
@@ -123,8 +123,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3 style="font-size:30px;">Teaching Math and Science to younger students:</h3>
             <p style="font-size:20px;" class="tab" id="Tpart2">I wanted to take my newfound interest in teaching further, so in high school I joined a program where
             students would go to local elementary/middle schools every week, and gave students extra help in math or science. I really enjoyed it, so I participated
-            in this program for three out of my four years in high school. </p><p style="font-size:20px;" class="tab" >My Junior year, I helped start another program where underrepresented minorities would come
-            to our high school every other weekend, and participate in fun lab or Science games to be exposed to how fun STEM can be from a young age</p>
+            in this program for three out of my four years in high school. </p><p style="font-size:20px;" class="tab" >My junior year, I helped start another program where underrepresented minorities would come
+            to our high school every other weekend, and participate in fun lab or science games to be exposed to how fun STEM can be from a young age</p>
     <p style="font-size:20px;" class="tab" > These experience taught me that when teaching, the most important thing to notice is how your student
     learns/understands information. This idea is especially important with younger students, since something like addition, which may seem intuitive to you, can be tricky or
     daunting to them.</p>
@@ -150,7 +150,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p style="font-size:20px;" class="tab" >Refer to my <a href="#TeachOrigami">Teaching Origami</a> Section</p>
         <h3 style="font-size:35px;" id = "Basket">Basketball</h3>
     <p style="font-size:20px;" class="tab" >I've been playing basketball since I was very young. In high school, I played on the varsity team for three years and was
-    captain my Senior year. My freshman year of CMU, I played on the club basketball team as a shooting guard averaging over 15 points a game and played on the SPIRIT IM team as well.</p>
+    captain my senior year. My freshman year of CMU, I played on the club basketball team as a shooting guard averaging over 15 points a game and played on the SPIRIT IM team as well.</p>
 <img src="images/Basketball.jpg" width="300" height="300" align="center"><br>
     <h1 style="font-size:45px;" ><a href="index.html" class="txtlink">Back to Main Page</a></h1><br>
     <div id="line1">Ways to contact me</div>
