added some periods

--- a/Help.html
+++ b/Help.html
@@ -103,14 +103,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </ul>
 
     <h3 style="font-size:30px;" id="Rail">ARailRoads</h3>
-        <h3 style="font-size:20px;"> Simple implementation of A*. Given two cities, finds the fastest route by train, animating the process of finding the route</h3>
+        <h3 style="font-size:20px;"> Simple implementation of A*. Given two cities, finds the fastest route by train, animating the process of finding the route.</h3>
 <!--<iframe width="580" height="315" src="https://www.youtube.com/watch?v=_wYtG7aQTHA" frameborder="0" allowfullscreen=""></iframe>-->
         <h3 style="font-size:35px;" id = "Teach">Teaching</h3>
     <h3 style="font-size:30px;" id="TeachOrigami">Teaching Origami Across the World:</h3>
         <p style="font-size:20px;" class="tab" id="Tpart1">My first experience with teaching came when I was in eighth grade, and I taught a week long camp on origami to some middle schoolers.
             We learned how to fold a simple five-fold cup, then went on the more advanced models like a heart and a crane. It was a great experience and
-        piqued my interest with teaching as a whole</p>
-            <p style="font-size:20px;" class="tab">Over the next several years, I was able to teach origami across three continents. As of now, I still teach some models at CMU's origami club</p>
+        piqued my interest with teaching as a whole.</p>
+            <p style="font-size:20px;" class="tab">Over the next several years, I was able to teach origami across three continents. As of now, I still teach some models at CMU's origami club.</p>
 
                                                            <div class="w3-third w3-section">
                                                                <img src="images/Origami3.jpg" width="300" height="300"><br><p >Me in 8th grade teaching origami to kids in South Carolina</p></div>
@@ -124,13 +124,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <p style="font-size:20px;" class="tab" id="Tpart2">I wanted to take my newfound interest in teaching further, so in high school I joined a program where
             students would go to local elementary/middle schools every week, and gave students extra help in math or science. I really enjoyed it, so I participated
             in this program for three out of my four years in high school. </p><p style="font-size:20px;" class="tab" >My junior year, I helped start another program where underrepresented minorities would come
-            to our high school every other weekend, and participate in fun lab or science games to be exposed to how fun STEM can be from a young age</p>
+            to our high school every other weekend, and participate in fun lab or science games to be exposed to how fun STEM can be from a young age.</p>
     <p style="font-size:20px;" class="tab" > These experience taught me that when teaching, the most important thing to notice is how your student
     learns/understands information. This idea is especially important with younger students, since something like addition, which may seem intuitive to you, can be tricky or
     daunting to them.</p>
         <h3 style="font-size:30px;">Teaching Higher Level Topics(Math, Java, Python, and AI):</h3>
     <p style="font-size:20px;" class="tab"> In order to continue what had at this point become a love of teaching, My senior year of high school I tutored students one on one in Java and Python. My Java students
-    had never seen code before, so my goal with them was to get them to think like computer scientists, and see the field as a fun new challenge instead of a daunting ocean of danger</p>
+    had never seen code before, so my goal with them was to get them to think like computer scientists, and see the field as a fun new challenge instead of a daunting ocean of danger.</p>
     <p style="font-size:20px;" class="tab"> I also taught students with a solid python background some basics in AI, like Breadth and Depth First Search, how to
     make an AI that can smartly solve a sudoku board, and rudimentary neural nets from scratch(No libraries allowed!)</p>
         <p style="font-size:20px;" class="tab"> In the Fall of 2020, I am TAing 15-151: Mathematical Foundations for Computer Science at CMU, an introductory
