--- a/Help.html
+++ b/Help.html
@@ -52,7 +52,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <p style="font-size:23px;"><a target="_blank" href = "https://csd.cs.cmu.edu/course-profiles/15-150-Principles-of-Functional-Programming">15-150: Principles of Functional Programming</a></p>
         <p style="font-size:23px;"><a target="_blank" href = "http://www.math.cmu.edu/~handron/21_259/index.html">21-259: Calculus in Three Dimensions</a></p>
         <h4 style="font-size:15px;">Fall '20</h4>
-        <p style="font-size:23px;"><a target="_blank" href = "http://math.cmu.edu/~sevakm/teaching/fall12pt.html">21-325: Pobability</a></p>
+        <p style="font-size:23px;"><a target="_blank" href = "http://math.cmu.edu/~sevakm/teaching/fall12pt.html">21-325: Probability</a></p>
         <p style="font-size:23px;"><a target="_blank" href = "https://csd.cs.cmu.edu/course-profiles/15-213-Introduction-to-Computer-Systems">15-213: Introduction to Computer Systems</a></p>
         <p style="font-size:23px;"><a target="_blank" href = "https://csd.cs.cmu.edu/course-profiles/15-295-Competition-Programming-and-Problem-Solving">15-295: Competition Programming and Problem Solving</a></p>
         <p style="font-size:23px;"><a target="_blank" href = "http://coursecatalog.web.cmu.edu/schools-colleges/schoolofcomputerscience/artificialintelligence/#curriculumtextcontainer">80-249: Ai, Society, and Humanity</a></p>
