all links don't add new tabs

--- a/Help.html
+++ b/Help.html
@@ -31,7 +31,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-content w3-padding-large w3-margin-top" id="portfolio">
     <h1 style="font-size:60px;" ><a href="index.html" class="txtlink">Maxwell Jones</a></h1><br>
     <h2 style="font-size:40px;" >Education</h2>
-        <h3 style="font-size:30px;"><a target="_blank" href="https://tjhsst.fcps.edu/" class="txtlink" id = "TJ">Thomas Jefferson High School</a> </h3>
+        <h3 style="font-size:30px;"><a  href="https://tjhsst.fcps.edu/" class="txtlink" id = "TJ">Thomas Jefferson High School</a> </h3>
     <h3>2016 - 2019, 4.1 weighted GPA</h3>
     <h3>Relevant Courses:</h3>
     <p style="font-size:20px;">AP Calculus BC, Multivariabe Calculus, Differential Equations, Complex Analysis, <br>AP Physics C Mechanics, AP Physics C Electricity and Magnetism,
@@ -39,31 +39,31 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <h3>Other Info:</h3>
     <ul style="font-size:20px;"><li>3 year Varsity Basketball Player, captian Senior year</li><li>Created a program that allowed for advanced statistics on basketball games to be kept, like best lineups in terms of plus minus</li>Vice President of Future Business Leaders of America<li>Helped create a Science program where students from a local middle school would participate in fun Stem projects every other weekend</li> </ul>
     <br>
-    <h3 style="font-size:30px;"><a target="_blank" href="https://www.cmu.edu/" class="txtlink" id = "CMU">Carnegie Mellon University</a></h3>
+    <h3 style="font-size:30px;"><a  href="https://www.cmu.edu/" class="txtlink" id = "CMU">Carnegie Mellon University</a></h3>
     <h3 style="font-size:20px;">Ai and Math major</h3>
     <h3>2019 - 2023, 4.0 unweighted GPA</h3>
         <h3>Relevant Courses:</h3>
     <h4 style="font-size:15px;">Fall '19</h4>
-    <p style="font-size:23px;"><a target="_blank" href = "https://www.math.cmu.edu/~handron/21_241/index.html">21-241: Matrix Algebra</a></p>
-        <p style="font-size:23px;"><a target="_blank" href="https://csd.cs.cmu.edu/course-profiles/15-151-Mathematical-Foundations-for-Computer-Science">15-151: Mathematical Foundations for Computer Science</a></p>
-    <p style="font-size:23px;"><a target="_blank" href="https://csd.cs.cmu.edu/course-profiles/15-122-principles-imperative-computation">15-122: Principles of Imperative Computation</a></p>
+    <p style="font-size:23px;"><a  href = "https://www.math.cmu.edu/~handron/21_241/index.html">21-241: Matrix Algebra</a></p>
+        <p style="font-size:23px;"><a  href="https://csd.cs.cmu.edu/course-profiles/15-151-Mathematical-Foundations-for-Computer-Science">15-151: Mathematical Foundations for Computer Science</a></p>
+    <p style="font-size:23px;"><a  href="https://csd.cs.cmu.edu/course-profiles/15-122-principles-imperative-computation">15-122: Principles of Imperative Computation</a></p>
     <h4 style="font-size:15px;">Spring '20</h4>
-        <p style="font-size:23px;"><a target="_blank" href = "https://www.csd.cs.cmu.edu/course-profiles/15-251-Great-Theoretical-Ideas-in-Computer-Science">15-251: Great Theoretical Ideas in Computer Science</a></p>
-        <p style="font-size:23px;"><a target="_blank" href = "https://csd.cs.cmu.edu/course-profiles/15-150-Principles-of-Functional-Programming">15-150: Principles of Functional Programming</a></p>
-        <p style="font-size:23px;"><a target="_blank" href = "http://www.math.cmu.edu/~handron/21_259/index.html">21-259: Calculus in Three Dimensions</a></p>
+        <p style="font-size:23px;"><a  href = "https://www.csd.cs.cmu.edu/course-profiles/15-251-Great-Theoretical-Ideas-in-Computer-Science">15-251: Great Theoretical Ideas in Computer Science</a></p>
+        <p style="font-size:23px;"><a  href = "https://csd.cs.cmu.edu/course-profiles/15-150-Principles-of-Functional-Programming">15-150: Principles of Functional Programming</a></p>
+        <p style="font-size:23px;"><a  href = "http://www.math.cmu.edu/~handron/21_259/index.html">21-259: Calculus in Three Dimensions</a></p>
         <h4 style="font-size:15px;">Fall '20</h4>
-        <p style="font-size:23px;"><a target="_blank" href = "http://math.cmu.edu/~sevakm/teaching/fall12pt.html">21-325: Probability</a></p>
-        <p style="font-size:23px;"><a target="_blank" href = "https://csd.cs.cmu.edu/course-profiles/15-213-Introduction-to-Computer-Systems">15-213: Introduction to Computer Systems</a></p>
-        <p style="font-size:23px;"><a target="_blank" href = "https://csd.cs.cmu.edu/course-profiles/15-295-Competition-Programming-and-Problem-Solving">15-295: Competition Programming and Problem Solving</a></p>
-        <p style="font-size:23px;"><a target="_blank" href = "http://coursecatalog.web.cmu.edu/schools-colleges/schoolofcomputerscience/artificialintelligence/#curriculumtextcontainer">80-249: Ai, Society, and Humanity</a></p>
+        <p style="font-size:23px;"><a  href = "http://math.cmu.edu/~sevakm/teaching/fall12pt.html">21-325: Probability</a></p>
+        <p style="font-size:23px;"><a  href = "https://csd.cs.cmu.edu/course-profiles/15-213-Introduction-to-Computer-Systems">15-213: Introduction to Computer Systems</a></p>
+        <p style="font-size:23px;"><a  href = "https://csd.cs.cmu.edu/course-profiles/15-295-Competition-Programming-and-Problem-Solving">15-295: Competition Programming and Problem Solving</a></p>
+        <p style="font-size:23px;"><a  href = "http://coursecatalog.web.cmu.edu/schools-colleges/schoolofcomputerscience/artificialintelligence/#curriculumtextcontainer">80-249: Ai, Society, and Humanity</a></p>
         <h3>Other Info:</h3>
-    <ul style="font-size:20px;"><li><a target="_blank" href="https://thebridge.cmu.edu/organization/spirit">SPIRIT</a> Treasurer 2020-2021 School Year</li><li>Club Basketball Player '19</li><li>Member of Kappa Sigma, Fraternity on Campus</li><li>Member of the Origami Club</li></ul>
+    <ul style="font-size:20px;"><li><a  href="https://thebridge.cmu.edu/organization/spirit">SPIRIT</a> Treasurer 2020-2021 School Year</li><li>Club Basketball Player '19</li><li>Member of Kappa Sigma, Fraternity on Campus</li><li>Member of the Origami Club</li></ul>
     <br>
-        <h3 style="font-size:30px;"><a target="_blank" href="https://www.fcagroup.com/en-US/Pages/home.aspx" class="txtlink" id = "FCA">Fiat Chrysler Automobiles Internship</a></h3>
+        <h3 style="font-size:30px;"><a  href="https://www.fcagroup.com/en-US/Pages/home.aspx" class="txtlink" id = "FCA">Fiat Chrysler Automobiles Internship</a></h3>
  <h3 style="font-size:15px;">Summer 2020</h3>
      <h3 style="font-size:20px;">Worked on a team that used tensorflow to make a model that could predict the average number of workers that would come to a plant on any given day.</h3>
 
-    <h3 style="font-size:30px;">Origami Social Networking<a target="_blank" href="https://user.tjhsst.edu/2019mjones/csslogin.html" class="txtlink" id = "Origami">(Link to Website) </a></h3>
+    <h3 style="font-size:30px;">Origami Social Networking<a  href="https://user.tjhsst.edu/2019mjones/csslogin.html" class="txtlink" id = "Origami">(Link to Website) </a></h3>
         <h3 style="font-size:20px;"><b>Problem</b>: There is no platform for small origamists to meet and share origami models</h3>
     <h3 style="font-size:20px;"><b>Goal</b>: Create a website where origamists can share their work with each other</h3>
     <h3>Features:</h3>
@@ -73,8 +73,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <li>Created a python script along with website allowing for users to create Origami crease patterns and download them from a python script</li>
     </ul>
 
-    <h3 style="font-size:30px;" id = "WS"><a target="_blank" href="https://github.com/jasonchadwick/WalkSafe" class="txtlink" >WalkSafe </a>(TartanHacks 2020 project)</h3>
-            <h3 style="font-size:20px;"><b>Partners</b>: <a target="_blank" href="https://www.linkedin.com/in/tanvi-bhargava-2b23060/">Tanvi  Bhargava</a>, <a target="_blank" href="https://www.linkedin.com/in/jasonchadwick/">Jason Chadwick</a>, <a target="_blank" href="https://www.facebook.com/adrian.maurice.12">Adrian Maurice</a></h3>
+    <h3 style="font-size:30px;" id = "WS"><a  href="https://github.com/jasonchadwick/WalkSafe" class="txtlink" >WalkSafe </a>(TartanHacks 2020 project)</h3>
+            <h3 style="font-size:20px;"><b>Partners</b>: <a  href="https://www.linkedin.com/in/tanvi-bhargava-2b23060/">Tanvi  Bhargava</a>, <a  href="https://www.linkedin.com/in/jasonchadwick/">Jason Chadwick</a>, <a  href="https://www.facebook.com/adrian.maurice.12">Adrian Maurice</a></h3>
     <h3 style="font-size:20px;"><b>Problem</b>: Walking alone in big cities can be risky in areas where crime is prevelent</h3>
     <h3 style="font-size:20px;"><b>Goal</b>: Create a program that, given a start and end location, gives a user the safest timely walking path to their destination. We used Manhatten
     as a test area since they had a lot of crime data for us to use.</h3>
@@ -86,8 +86,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-half w3-section"><img src="images/Manhatten.jpg" align="center" width="300" height="300"><br><p>Heatmap of Manhatten, with red/brighter areas representing more crime</p></div>
        <div class="w3-section" ><img src="images/path.jpg"><br><p>Optimal Path in green overlayed by heat map of crime</p></div>
 
-        <h3 id = "linear" style="font-size:30px;">Predicting Football with Linear Algebra<a target="_blank" href="Linear.pdf" class="txtlink" >(Full Paper)</a></h3>
-    <h3 style="font-size:20px;"><b>Partner</b>: <a target="_blank" href="https://www.linkedin.com/in/eric-gan-cmu/">Eric Gan</a></h3>
+        <h3 id = "linear" style="font-size:30px;">Predicting Football with Linear Algebra<a  href="Linear.pdf" class="txtlink" >(Full Paper)</a></h3>
+    <h3 style="font-size:20px;"><b>Partner</b>: <a  href="https://www.linkedin.com/in/eric-gan-cmu/">Eric Gan</a></h3>
     <h3 style="font-size:20px;"><b>Goal</b>: Accurately predict an NFL playoff bracket given regular season data</h3>
     <h3>Different strategies:</h3>
     <ul style="font-size:20px;">
@@ -138,7 +138,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <h3 style="font-size:35px;" id = "Origamii">Origami</h3>
         <h3 style="font-size:30px;">Models</h3>
     <p style="font-size:20px;" class="tab" >I've been folding origami for over a decade now, and over time I've been able to become skilled enough to fold some great models. Nowadays I do most of my folding at CMU's origami club.
-        Here are some of my favorites from my <a target="_blank" href="https://www.instagram.com/origami__wonders/">Origami Instagram Page</a>: </p>
+        Here are some of my favorites from my <a  href="https://www.instagram.com/origami__wonders/">Origami Instagram Page</a>: </p>
 <div class="w3-third w3-section">
 <img src="images/turtle.jpg" width="300" height="300"><br><p align="center">Turtle</p></div>
 <div class="w3-third w3-section"><img src="images/SeaScorpio.jpg" width="300" height="300"><br><p align="center">Sea scorpion</p></div>
@@ -156,11 +156,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div id="line1">Ways to contact me</div>
       <div id="line2" ><i style="font-size:12">maxwelljonesnova@gmail.com</i></div>
           <div id="line3" >
-              <a target="_blank" href="https://github.com/maxwelljones14">
+              <a  href="https://github.com/maxwelljones14">
       <i class="fa fa-github w3-hover-opacity" style="font-size:45px"></i>     </a>
-                    <a target="_blank" href="https://www.linkedin.com/in/maxwell-jones-636393190/">
+                    <a  href="https://www.linkedin.com/in/maxwell-jones-636393190/">
               <i class="fa fa-linkedin w3-hover-opacity" style="font-size:45px">     </i></a>
-                                      <a target="_blank" href="https://www.instagram.com/maxwelljones14/">
+                                      <a  href="https://www.instagram.com/maxwelljones14/">
                                           <i class="fa fa-instagram w3-hover-opacity" style="font-size:45px">     </i></a>
   <!-- End footer --></div>
 
