--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
           <p>Double Major in AI and Math</p>
     <img src="/images/profile_pic.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="/images/profile_pic.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <a target="_blank" href="Resume_doc.pdf">
+    <a href="Resume_doc.pdf">
         <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
 
         <i class="fa fa-download"></i> My Resume
@@ -71,20 +71,20 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-third w3-section">
                   <img src="images/TJ.jpeg" style="width:100%" height="300">
           <span class="w3-xlarge" >Thomas Jefferson High School</span><br>
-                        <a target="_blank" href="Help.html#TJ">
+                        <a href="Help.html#TJ">
                             <button class="w3-button" type = "button" >learn more</button></a>
       </div>
       <div class="w3-third w3-section">
                   <img src="images/CMU.jpg" style="width:100%" height="300">
 
         <span class="w3-xlarge">Carnegie Mellon University</span><br>
-                                  <a target="_blank" href="Help.html#CMU" >
+                                  <a href="Help.html#CMU" >
                                       <button class="w3-button" type = "button" >learn more</button></a>
       </div>
       <div class="w3-third w3-section">
                             <img src="images/FCA.jpg" style="width:100%" height="300">
         <span class="w3-xlarge">Fiat Chrysler Automobiles</span><br>
-                                            <a target="_blank" href="Help.html#FCA" >
+                                            <a href="Help.html#FCA" >
                                                 <button class="w3-button" type = "button" >learn more</button></a>
       </div>
     </div>
@@ -105,19 +105,19 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-                    <a  target="_blank"  href="Help.html#Origami">
+                    <a   href="Help.html#Origami">
                     <div class="w3-button button2">
                         <img src="images/Origami.png" style="width:100%"></div></a>
-                              <a  target="_blank"  href="Help.html#linear">
+                              <a   href="Help.html#linear">
                               <div class="w3-button button2">
                                   <img src="images/Housing.jpg" style="width:100%"></div></a>
       </div>
 
       <div class="w3-half">
-          <a  target="_blank" href="Help.html#WS">
+          <a  href="Help.html#WS">
           <div class="w3-button button2">
         <img src="images/WalkSafe.jpg" style="width:100%"></div></a>
-                                        <a  target="_blank" href="Help.html#Rail">
+                                        <a  href="Help.html#Rail">
 <div class="w3-button button2">
         <img src="images/Railroads.jpg" style="width:100%"></div>
                                         </a></div>
@@ -130,19 +130,19 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2 class="w3-text-grey">Some of my hobbies</h2>
     <div class="w3-row w3-center w3-dark-grey w3-row-padding w3-padding-16 w3-section">
       <div class="w3-third w3-section">
-                        <span class="w3-xlarge">Teaching</span><br>                    <a  target="_blank" href="Help.html#Teach">
+                        <span class="w3-xlarge">Teaching</span><br>                    <a  href="Help.html#Teach">
           <button class="w3-button" type = "button" >learn more</button></a>
       </div>
 
       <div class="w3-third w3-section">
 
         <span class="w3-xlarge">Origami</span><br>
-              <a  target="_blank" href="Help.html#Origamii">
+              <a  href="Help.html#Origamii">
                   <button class="w3-button" type = "button" >learn more</button></a>
       </div>
  <div class="w3-third w3-section">
           <span class="w3-xlarge" >Basketball</span><br>
-                   <a  target="_blank" href="Help.html#Basket">
+                   <a  href="Help.html#Basket">
                        <button class="w3-button" type = "button" >learn more</button></a>
       </div>
   </div>
@@ -155,11 +155,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div id="line1">Ways to contact me</div>
       <div id="line2" ><i style="font-size:12">maxwelljonesnova@gmail.com</i></div>
           <div id="line3" >
-              <a target="_blank" href="https://github.com/maxwelljones14">
+              <a href="https://github.com/maxwelljones14">
       <i class="fa fa-github w3-hover-opacity" style="font-size:45px"></i>     </a>
-                    <a target="_blank" href="https://www.linkedin.com/in/maxwell-jones-636393190/">
+                    <a href="https://www.linkedin.com/in/maxwell-jones-636393190/">
               <i class="fa fa-linkedin w3-hover-opacity" style="font-size:45px">     </i></a>
-                                      <a target="_blank" href="https://www.instagram.com/maxwelljones14/">
+                                      <a href="https://www.instagram.com/maxwelljones14/">
                                           <i class="fa fa-instagram w3-hover-opacity" style="font-size:45px">     </i></a>
   <!-- End footer --></div>
   </footer>
