--- a/Help.html
+++ b/Help.html
@@ -74,7 +74,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </ul>
 
     <h3 style="font-size:30px;" id = "WS"><a  href="https://github.com/jasonchadwick/WalkSafe" class="txtlink" >WalkSafe </a>(TartanHacks 2020 project)</h3>
-            <h3 style="font-size:20px;"><b>Partners</b>: <a  href="https://www.linkedin.com/in/tanvi-bhargava-2b23060/">Tanvi  Bhargava</a>, <a  href="https://www.linkedin.com/in/jasonchadwick/">Jason Chadwick</a>, <a  href="https://www.facebook.com/adrian.maurice.12">Adrian Maurice</a></h3>
+            <h3 style="font-size:20px;"><b>Partners</b>: <a  href="https://www.linkedin.com/in/tanvi-bhargava-2b23060/">Tanvi  Bhargava</a>, <a  href="https://www.linkedin.com/in/jasonchadwick/">Jason Chadwick</a>, <a  href="https://www.linkedin.com/in/adriankager/">Adrian Kager</a></h3>
     <h3 style="font-size:20px;"><b>Problem</b>: Walking alone in big cities can be risky in areas where crime is prevelent</h3>
     <h3 style="font-size:20px;"><b>Goal</b>: Create a program that, given a start and end location, gives a user the safest timely walking path to their destination. We used Manhatten
     as a test area since they had a lot of crime data for us to use.</h3>
@@ -104,7 +104,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     <h3 style="font-size:30px;" id="Rail">ARailRoads</h3>
         <h3 style="font-size:20px;"> Simple implementation of A*. Given two cities, finds the fastest route by train, animating the process of finding the route.</h3>
-<iframe width="580" height="315" src="https://www.youtube.com/watch?v=_wYtG7aQTHA" frameborder="0" allowfullscreen=""></iframe>
+<!--<iframe width="580" height="315" src="https://www.youtube.com/embed/watch?v=pPw_izFr5PA&list=RDpPw_izFr5PA&start_radio=1" frameborder="0" allowfullscreen=""></iframe>-->
         <h3 style="font-size:35px;" id = "Teach">Teaching</h3>
     <h3 style="font-size:30px;" id="TeachOrigami">Teaching Origami Across the World:</h3>
         <p style="font-size:20px;" class="tab" id="Tpart1">My first experience with teaching came when I was in eighth grade, and I taught a week long camp on origami to some middle schoolers.
