--- a/Help.html
+++ b/Help.html
@@ -103,7 +103,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </ul>
 
     <h3 style="font-size:30px;" id="Rail">ARailRoads</h3>
-        <h3 style="font-size:20px;"> Simple implementation of A*. Given two cities, finds the fastest route by train, animating the process of finding the route.</h3>
+        <h3 style="font-size:20px;"> Simple implementation of A*. Given two cities, finds the fastest route by train, animating the process of finding the route. Here's an example path from Seattle to Miami:</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/sPqFJk4PgJg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    <h3 style="font-size:35px;" id = "Teach">Teaching</h3>
     <h3 style="font-size:30px;" id="TeachOrigami">Teaching Origami Across the World:</h3>
         <p style="font-size:20px;" class="tab" id="Tpart1">My first experience with teaching came when I was in eighth grade, and I taught a week long camp on origami to some middle schoolers.
