Updated FCA section

--- a/Help.html
+++ b/Help.html
@@ -61,8 +61,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <br>
         <h3 style="font-size:30px;"><a  href="https://www.fcagroup.com/en-US/Pages/home.aspx" class="txtlink" id = "FCA">Fiat Chrysler Automobiles Internship</a></h3>
  <h3 style="font-size:15px;">Summer 2020</h3>
-     <h3 style="font-size:20px;">Worked on a team that used tensorflow to make a model that could predict the average number of workers that would come to a plant on any given day.</h3>
-
+        <h3 style="font-size:20px;"><b>Problem</b>Every day, workers don't show up to manufacturing plants wihout notice, forcing managers to estimate how many temporary workers to hire each day in order to keep the plant running at 100% efficiency</h3>
+    <h3 style="font-size:20px;"><b>My Specific Goal</b>Improve the model already in place that predicts the amount of absenteeism on any given day at a given plant</h3>
+    <h3>Solution(Use of Meta Analysis):</h3>
+    <ul style="font-size:20px;"><li>C</li>
+        <li>In addition to variables like day of the week, added cross referenced variables from other plants</li>
+        <li>cross referencing plant data adds stability to each individual model</li>
+        <li>Tentative results looked promising, project continued by data science team after I left</li>
+    </ul>
     <h3 style="font-size:30px;">Origami Social Networking<a  href="https://user.tjhsst.edu/2019mjones/csslogin.html" class="txtlink" id = "Origami">(Link to Website) </a></h3>
         <h3 style="font-size:20px;"><b>Problem</b>: There is no platform for small origamists to meet and share origami models</h3>
     <h3 style="font-size:20px;"><b>Goal</b>: Create a website where origamists can share their work with each other</h3>
