--- a/Help.html
+++ b/Help.html
@@ -61,8 +61,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <br>
         <h3 style="font-size:30px;"><a  href="https://www.fcagroup.com/en-US/Pages/home.aspx" class="txtlink" id = "FCA">Fiat Chrysler Automobiles Internship</a></h3>
  <h3 style="font-size:15px;">Summer 2020</h3>
-        <h3 style="font-size:20px;"><b>Problem</b>Every day, workers don't show up to manufacturing plants wihout notice, forcing managers to estimate how many temporary workers to hire each day in order to keep the plant running at 100% efficiency</h3>
-    <h3 style="font-size:20px;"><b>My Specific Goal</b>Improve the model already in place that predicts the amount of absenteeism on any given day at a given plant</h3>
+        <h3 style="font-size:20px;"><b>Problem: </b>Every day, workers don't show up to manufacturing plants wihout notice, forcing managers to estimate how many temporary workers to hire each day in order to keep the plant running at 100% efficiency</h3>
+    <h3 style="font-size:20px;"><b>My Specific Goal: </b>Improve the model already in place that predicts the amount of absenteeism on any given day at a given plant</h3>
     <h3>Solution(Use of Meta Analysis):</h3>
     <ul style="font-size:20px;"><li>C</li>
         <li>In addition to variables like day of the week, added cross referenced variables from other plants</li>
